--- a/WebContent/dashboard.css
+++ b/WebContent/dashboard.css
@@ -7,15 +7,28 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
-.scrollmenu {
+
+.bottom-footer {
    position:absolute;
    bottom:0;
    width:100%;
-   background-color: white;
-   height:20px;
-   overflow: auto;
+   background-color: #333;
+   height:60px;
    white-space: nowrap;
 }
+
+.bottom-footer .container-fluid
+{
+	position: relative;
+	top: 50%;
+}
+
+.bottom-footer .container-fluid .row .col-sm-4 
+{
+	text-align: center;
+}
+
+
 
 
 
