--- a/WebContent/dashboard.css
+++ b/WebContent/dashboard.css
@@ -1,15 +1,79 @@
 @charset "ISO-8859-1";
-html {
-  position: relative;
-  min-height: 100%;
+
+@import url(https://fonts.googleapis.com/css?family=Dosis:300|Lato:300,400,600,700|Roboto+Condensed:300,700|Open+Sans+Condensed:300,600|Open+Sans:400,300,600,700|Maven+Pro:400,700);
+@import url("https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
+
+html {
+  background: black;
+}
+
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  font-family: "Open Sans";
+  font-size: 16px;
+  color: White;
+  font-smoothing: antialiased;
+  font-weight: 600;
+}
+
+a {
+  color: #BBB;
+}
+
+.content:before {
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+  display: block;
+  background-color: black;
+  background-image: url("images/signin.jpeg");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
+}
+
+.content {
+  overflow:auto;	
+  position:absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(10, 10, 10, 0.5);
+  margin: auto auto;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  -moz-box-shadow: 0 0 10px black;
+  -webkit-box-shadow: 0 0 10px black;
+  box-shadow: 0 0 10px black;
+}
+
+.form-control{
+	border-color: #0d5300 !important;
+}
+
+.panel-default{
+	border-color: #0d5300;
+	border-color: #0d5300;
 }
 
 .bottom-footer {
-   position:absolute;
+   border-color: #0d5300 !important;	
+   position:fixed;
    bottom:0;
    width:100%;
    background-color: #333;
@@ -23,8 +87,11 @@ body {
 	top: 30%;
 }
 
-.bottom-footer .container-fluid .row .col-sm-4 
+
+.bottom-footer .container-fluid .row .col 
 {
+	display:inline-block;
+	width:33%;
 	text-align: center;
 }
 
@@ -41,7 +108,7 @@ body {
 	color: #FF6565;
 }
 .changepositive{
-	color:#AFFF95;
+	color:#27ba54;
 }
 .quotes {
 	background-color:white;
@@ -78,4 +145,41 @@ body {
 	font-size: 1.2em;
 }
 
+.panel-body{
+	background-color:#222222;
+}
 
+#welcome{
+	pointer-events: none;
+}
+
+#cwbutton{
+	width: 100%;
+	background-color:#373737;
+	border-color:#0d5300;
+	color: white !important;
+}
+
+#ex6{
+	background-color:#373737 !important;
+	color: white !important;
+}
+
+#watchlistinput{
+	background-color:#373737;
+	border-color:#0d5300;
+	color:white !important;
+}
+
+.container-fluid{
+	border-color: #0d5300 !important;
+}
+
+button{
+	background-color: #0d5300 !important;
+	border-color: #0d5300 !important;
+}
+
+input{
+	color:black;
+}
