--- a/WebContent/loginpage.css
+++ b/WebContent/loginpage.css
@@ -125,7 +125,7 @@ a {
   font-size: 1.1rem;
   padding: 10px;
   margin: 20px 0px;
-  background-color: #66A756;
+  background-color: #0d5300;
   color: White;
   border: none;
   -moz-border-radius: 4px;
