--- a/WebContent/dashboard.css
+++ b/WebContent/dashboard.css
@@ -53,13 +53,14 @@ a {
   left: 0;
   right: 0;
   background-color: rgba(10, 10, 10, 0.5);
-  margin: auto auto;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   -moz-box-shadow: 0 0 10px black;
   -webkit-box-shadow: 0 0 10px black;
   box-shadow: 0 0 10px black;
+  margin-bottom:60px !important;
+  margin-top:50px !important;
 }
 
 .form-control{
@@ -71,22 +72,35 @@ a {
 	border-color: #0d5300;
 }
 
+
 .bottom-footer {
+   overflow: visible;
    border-color: #0d5300 !important;	
    position:fixed;
    bottom:0;
+   right: 0;
+   left:0;
    width:100%;
    background-color: #333;
    height:60px;
    white-space: nowrap;
 }
 
+#nav, #homenav{
+	top:0;
+	right:0;
+	left:0;
+	width:100%;
+	position:fixed;
+	white-space: nowrap;
+}
+
+
 .bottom-footer .container-fluid
 {
 	position: relative;
 	top: 30%;
 }
-
 
 .bottom-footer .container-fluid .row .col 
 {
@@ -104,7 +118,7 @@ a {
 }
 
 .changenegative{
-	background-color:#777777;
+
 	color: #FF6565;
 }
 .changepositive{
@@ -165,6 +179,10 @@ a {
 	color: white !important;
 }
 
+#search, #homesearch{
+	padding-top:20px;
+	padding-bottom: 20px;
+}
 #watchlistinput{
 	background-color:#373737;
 	border-color:#0d5300;
